$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-2 (opened February 18, 2010)

	* screeplot: New argument 'legend' for all methods (except
	'decorana') to draw a legend if the observed and broken stick
	distribution are both plotted. Now also respects 'pch' for the
	broken stick line.

	* permutest.betadisper: print method got ordering of permutation
	p-values wrong in displaying the matrix of pairwise tests. The
	computed values were correct. The formatting for printing contained
	the bug. Reported by Dan O'Shea.

Version 1.18-1 (closed February 18, 2010)

	* closed with the release of vegan 1.17-1. The release contains
	bug fixes and multipart of 1.18-1, but excludes MOStest and 1.18-1
	upgrades to ordistep.

	* ordistep: saves model changes in the 'anova' item similarly as
	standard step(). Experimental feature: not yet documented.

	* envfit: did not pass weights to factorfit or to vectorfit when
	the environmental variable was a single vector. Reported for
	vectors by Richard Telford. Broken in rev1004 (Sep 12, 2009).

	* CCorA: Fixed bug in presentation of variables in plots. Adds new
	biplot types. General improvement in checking exceptional cases
	improve stability.

	* predict.cca, predict.rda: match 'newdata' by row names or column
	names in type = "wa" and type = "sp". This is similar as
	predict.prcomp/princomp. Gained choice type = "working" for
	working residuals (as fitted.cca/rda).

	* simulate.rda, simulate.cca: gained argument rank passed to
	predict.rda() or predict.rda(). This also allows simulation under
	null model by setting rank = 0.

	* permatfull.Rd: fixed braces in the help file + mark-up.

Version 1.18-0 (closed January 11, 2010 with release 1.17-0)

	* Documented na.action in cca.object.

	* Opened concurrently with copying 1.16-34 (at rev 1087) to
	branches/1.17 for a new release.

	* betadisper: 'type = "median"' is now the default type of
	analysis.
